k8s/jenkins-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-master-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: jenkins-master
  template:
    metadata:
      labels:
        component: jenkins-master
    spec:
      volumes:
        - name: docker-deamon-from-node
          hostPath: 
            path: /var/run/docker.sock # Expose the docker daemon in the container
      containers:
        - name: jenkins-master
          image: dandu1008/jenkins-master
          volumeMounts:
            - name: docker-deamon-from-node 
              mountPath: /var/run/docker.sock # Expose the docker daemon in the container
          ports:
            - containerPort: 8080
            - containerPort: 50000
