k8s/jenkins-master-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-master-ip-service
spec:
  type: ClusterIP
  ports:
    - name: jenkins
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: jnlp
      port: 50000
      targetPort: 50000
      protocol: TCP
  selector:
    component: jenkins-master
