k8s/jenkins-slave-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-slave-ip-service
spec:
  type: ClusterIP
  ports:
    - name: jnlp
      port: 50000
      targetPort: 50000
      protocol: TCP
  selector:
    component: jenkins-slave
